resources/assets/hardhat-detection-apps/hardhat-detection-inference/inference_triton/deploy/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: inference-hardhat
spec:
  selector:
    app: hardhat-inference
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
